tests/partial-sigs/should_compile/Recursive.hs
{-# LANGUAGE PartialTypeSignatures #-}
module Recursive where

orr :: a -> a -> a
orr = undefined

g :: _
g = f `orr` True

f :: _
f = g
